--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,57 @@
-<h1>Jonathon Gomez</h1>
+<h1>Welcome to CSE Motors!</h1>
+
+<section
+  id="hero"
+>
+<div id="hero-ad">
+    <h2>DMC Delorean</h2>
+    <ul>
+      <li>3 Cup holders</li>
+      <li>Superman Doors</li>
+      <li>Fuzzy dice!</li>
+    </ul>
+    <button>Own Today</button>
+</div>
+<img id="hero-img" src="images/vehicles/delorean-tn.jpg" alt="delorean-tn">
+</section>
+
+<section id="reviews">
+  <h1>DMC Delorean Reviews</h1>
+  <ul>
+    <li>"So fast it's almost like traveling in time.(4/5)</li>
+    <li>"Coolest ride on the road."(4/5)</li>
+    <li>"I'm feeling McFly!"(5/5)</li>
+    <li>"The most futuristic ride of our day."(4.5/5)</li>
+    <li>"80's livin and I love it!"(5/5)</li>
+  </ul>
+</section>
+
+<section id="upgrades">
+  <h1>Delorean Upgrades</h1>
+  <div id="upgrade-list">
+    <div class="upgrade-detail">
+      <div class="upgrade-square">
+        <img src="images/upgrades/flux-cap.png" alt="flux-capacitor" />
+      </div>
+      <a href="#">Flux Capacitor</a>
+    </div>
+    <div class="upgrade-detail">
+      <div class="upgrade-square">
+        <img src="images/upgrades/flame.jpg" alt="flame-decals" />
+      </div>
+      <a href="#">Flame Decals</a>
+    </div>
+    <div class="upgrade-detail">
+      <div class="upgrade-square">
+        <img src="images/upgrades/bumper_sticker.jpg" alt="bumper-stickers" />
+      </div>
+      <a href="#">Bumper Stickers</a>
+    </div>
+    <div class="upgrade-detail">
+      <div class="upgrade-square">
+        <img src="images/upgrades/hub-cap.jpg" alt="hub-caps" />
+      </div>
+      <a href="#">Hub Caps</a>
+    </div>
+  </div>
+</section>
