--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -4,4 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%- title %> | CSE 340 App</title>
     <link rel="stylesheet" href="/css/styles.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&display=swap');
+        </style>
 </head>
