--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,17 +12,23 @@
     </ul>
     <button>Own Today</button>
 </div>
-<img id="hero-img" src="images/vehicles/delorean-tn.jpg" alt="delorean-tn">
+<picture>
+  <source media="(min-width:768px)" srcset="images/vehicles/delorean.jpg">
+  <source media="(max-width:768px)" srcset="images/vehicles/delorean-tn.jpg">
+  <img id="hero-img" src="images/vehicles/delorean-tn.jpg" alt="delorean-tn">
+</picture>
 </section>
 
-<section id="reviews">
-  <h1>DMC Delorean Reviews</h1>
-  <ul>
-    <li>"So fast it's almost like traveling in time.(4/5)</li>
-    <li>"Coolest ride on the road."(4/5)</li>
-    <li>"I'm feeling McFly!"(5/5)</li>
-    <li>"The most futuristic ride of our day."(4.5/5)</li>
-    <li>"80's livin and I love it!"(5/5)</li>
+<div id="review-and-upgrade">
+
+  <section id="reviews">
+    <h1>DMC Delorean Reviews</h1>
+    <ul>
+      <li>"So fast it's almost like traveling in time.(4/5)</li>
+      <li>"Coolest ride on the road."(4/5)</li>
+      <li>"I'm feeling McFly!"(5/5)</li>
+      <li>"The most futuristic ride of our day."(4.5/5)</li>
+      <li>"80's livin and I love it!"(5/5)</li>
   </ul>
 </section>
 
@@ -55,3 +61,4 @@
     </div>
   </div>
 </section>
+</div>
