--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,7 +22,7 @@
 <div id="review-and-upgrade">
 
   <section id="reviews">
-    <h1>DMC Delorean Reviews</h1>
+    <h2>DMC Delorean Reviews</h2>
     <ul>
       <li>"So fast it's almost like traveling in time.(4/5)</li>
       <li>"Coolest ride on the road."(4/5)</li>
@@ -33,29 +33,29 @@
 </section>
 
 <section id="upgrades">
-  <h1>Delorean Upgrades</h1>
+  <h2>Delorean Upgrades</h2>
   <div id="upgrade-list">
     <div class="upgrade-detail">
       <div class="upgrade-square">
-        <img src="images/upgrades/flux-cap.png" alt="flux-capacitor" />
+        <img src="images/upgrades/flux-cap.png" alt="flux-capacitor" >
       </div>
       <a href="#">Flux Capacitor</a>
     </div>
     <div class="upgrade-detail">
       <div class="upgrade-square">
-        <img src="images/upgrades/flame.jpg" alt="flame-decals" />
+        <img src="images/upgrades/flame.jpg" alt="flame-decals" >
       </div>
       <a href="#">Flame Decals</a>
     </div>
     <div class="upgrade-detail">
       <div class="upgrade-square">
-        <img src="images/upgrades/bumper_sticker.jpg" alt="bumper-stickers" />
+        <img src="images/upgrades/bumper_sticker.jpg" alt="bumper-stickers" >
       </div>
       <a href="#">Bumper Stickers</a>
     </div>
     <div class="upgrade-detail">
       <div class="upgrade-square">
-        <img src="images/upgrades/hub-cap.jpg" alt="hub-caps" />
+        <img src="images/upgrades/hub-cap.jpg" alt="hub-caps" >
       </div>
       <a href="#">Hub Caps</a>
     </div>
