--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -40,6 +40,17 @@ nav {
   color: white;
 }
 
+nav a {
+  color:white;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+nav a:hover {
+  background-color: white;
+  color: #242333;
+}
+
 #hero{
   position: relative;
 }
