--- a/views/errors/error.ejs
+++ b/views/errors/error.ejs
@@ -9,8 +9,7 @@
 
 <!-- Error Message -->
 
+<%= message  %>
 
- <p>Oops! This doesn't look like any car you're looking for</p>
 
  <p>In the meantime, why not head back to the <a href="/" class="button">Homepage</a>?</p>
- <p>There may be other cars that you might be interested in</p>
