--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,6 @@
 <% const d = new Date()
 let year = d.getFullYear() %>
 <footer>
-    <p class="copyright">&copy;  <%= year %>, <a href="/views/footer.ejs">CSE 340 App</a></p>    
+    <p class="copyright">&copy;  <%= year %>, CSE 340 App</p>    
+    <p>Assignment 3 <a href="/inv/detail/99">Link</a> </p>
 </footer>
