--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -203,6 +203,71 @@ hr{
   margin-top: 20px;
 }
 
+.login-form {
+  margin: auto;
+}
+
+.login-form {
+  background-color: #242333;
+  color: white;
+  padding: 2rem;
+  border-radius: 8px;
+  width: 100%;
+  max-width: 400px;
+  margin: auto;
+}
+
+.login-form h2 {
+  font-size: 1.75rem;
+  font-weight: 700;
+  margin-bottom: 1.5rem;
+  text-align: center;
+}
+
+.login-form label {
+  display: block;
+  font-size: 0.875rem;
+  margin-bottom: 0.5rem;
+}
+
+.login-input {
+  width: 100%;
+  padding: 0.75rem;
+  margin-bottom: 1rem;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 1rem;
+}
+
+.submit-btn {
+  width: 100%;
+  padding: 0.75rem;
+  background-color: #01B0D3;
+  border: none;
+  border-radius: 4px;
+  color: black;
+  font-weight: 700;
+  font-size: 1rem;
+  cursor: pointer;
+  margin-bottom: 1rem;
+}
+
+.submit-btn:hover {
+  background-color: white;
+}
+
+
+
+.login-form a {
+  color: #01B0D3;
+  text-decoration: none;
+  font-weight: 700;
+}
+
+.login-form a:hover {
+  text-decoration: underline;
+}
+
 /******* Desktop Screen ***************/
 @media only screen and (min-width: 768px){
   body{
