--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -207,7 +207,7 @@ hr{
   margin: auto;
 }
 
-.login-form {
+.login-form, .sign-in-form {
   background-color: #242333;
   color: white;
   padding: 2rem;
@@ -224,13 +224,13 @@ hr{
   text-align: center;
 }
 
-.login-form label {
+.login-form label, .sign-in-form label {
   display: block;
   font-size: 0.875rem;
   margin-bottom: 0.5rem;
 }
 
-.login-input {
+.login-input, .sign-in-input {
   width: 100%;
   padding: 0.75rem;
   margin-bottom: 1rem;
