--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -14,6 +14,6 @@
         <label for="password">Password:</label>
         <input class="login-input" type="password" name="password" id="password" required>
         <input class="submit-btn" type="submit" value="Login">
-        <span>No account? <a href="#">Sign-up</a></span>
+        <span>No account? <a href="/account/register">Sign-up</a></span>
     </form>
 </div>
