--- a/views/account/register.ejs
+++ b/views/account/register.ejs
@@ -7,7 +7,7 @@
     <!-- Message Block -->
      <% messages() %>
 
-<form action="/register" class="sign-in-form">
+<form action="/register" class="sign-in-form" method="post">
     <label for="first-name">First Name:</label>
     <input class="sign-in-input" type="text" name="first-name" id="first-name" required>
     <label for="last-name">Last Name:</label>
