client-side form validation

--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -12,7 +12,8 @@
         <label for="email">Email:</label>
         <input class="login-input" type="email" name="email" id="email" required>
         <label for="password">Password:</label>
-        <input class="login-input" type="password" name="password" id="password" required>
+        <div class="pword-requirement">Password must be at least 12 characters and contain least 1 uppercase character, 1 number and 1 special character</div>
+        <input class="login-input" type="password" name="password" id="password" required pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[a-zA-Z0-9](?!.*\s).{12,}$)">
         <input class="submit-btn" type="submit" value="Login">
         <span>No account? <a href="/account/register">Sign-up</a></span>
     </form>
