--- a/views/account/register.ejs
+++ b/views/account/register.ejs
@@ -17,11 +17,11 @@
 
 <form action="/account/register" class="sign-in-form" method="post">
     <label for="first-name">First Name:</label>
-    <input class="sign-in-input" type="text" name="first-name" id="first-name" required>
+    <input class="sign-in-input" type="text" name="first-name" id="first-name" required value="<%= locals.account_firstname %>">
     <label for="last-name">Last Name:</label>
-    <input class="sign-in-input" type="text" name="last-name" id="last-name" required>
+    <input class="sign-in-input" type="text" name="last-name" id="last-name" required value="<%= locals.account_lastname %>">
     <label for="email">Email:</label>
-    <input class="sign-in-input" type="email" name="email" id="email" required>
+    <input class="sign-in-input" type="email" name="email" id="email" required value="<%= locals.account_email %>">
     <label for="password">Password:</label>
     <div class="pword-requirement">Password must be at least 12 characters and contain least 1 uppercase character, 1 number and 1 special character</div>
     <input class="sign-in-input" type="password" name="password" id="password" required pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[a-zA-Z0-9](?!.*\s).{12,}$)">
