--- a/views/inventory/add-classification.ejs
+++ b/views/inventory/add-classification.ejs
@@ -15,5 +15,5 @@
     <h2>Add a classification</h2>
     <label for="classification">Classification Name:</label>
     <div class="">The classification can not contain a space or a special character</div>
-    <input class="add-input" type="text" name="classification" id="classification" required pattern>
+    <input class="add-input" type="text" name="classification" id="classification" required pattern="^[a-zA-Z0-9]+$">
 </form>
