--- a/views/inventory/management.ejs
+++ b/views/inventory/management.ejs
@@ -6,5 +6,5 @@
 <% messages() %> 
 
 
-<a href="/inventory/add-classification">Add new classification</a>
+<a href="/inv/add-classification">Add new classification</a>
 <a href="">Add new inventory</a>
